--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 #myDiv {
   margin: 0 auto;
   border: 1px solid black;
-  height: 85vh;
-  min-height: 300px;
+  width: 800px;
+  height: 800px;
 }
