--- a/experiment2.css
+++ b/experiment2.css
@@ -1,6 +1,96 @@
-#myDiv {
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+div {
   margin: 0 auto;
-  border: 1px solid black;
-  width: 800px;
-  height: 800px;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.row {
+  display: flex;
+}
+
+.column {
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 50px;
+  background-color: rgb(0, 124, 128);
+
+}
+
+.header_title {
+  font-size: 20px;
+  margin: 10px;
+  color: aliceblue;
+  display: inline-block;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 50px;
+}
+
+
+
+.main {
+  margin: 80px;
+}
+
+.chart {
+  flex-grow: 8;
+}
+
+.controller {
+  flex-grow: 2;
+  margin-top: 100px;
+}
+
+.pod_title {
+  margin: 20px;
+}
+
+.pod_x {
+  margin-left: 20px;
+}
+
+.podt_x {
+  margin-left: 20px;
+}
+
+.pod_result {
+  margin: 20px;
+  margin-top: 50px;
+}
+
+input {
+  width: 50%;
+  margin-left: 10px;
+}
+
+button {
+  width: 50%;
+  margin-left: 10px;
 }
