--- a/experiment2.css
+++ b/experiment2.css
@@ -2,39 +2,24 @@
   box-sizing: border-box;
 }
 
-body {
+.row::after {
+  content: "";
+  clear: both;
+  display: block;
+}
+
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+}
+
+html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-div {
-  margin: 0 auto;
-}
-
-.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.row {
-  display: flex;
-}
-
-.column {
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-}
-
-
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 999;
-  width: 100%;
-  height: 50px;
+  padding: 15px;
   background-color: rgb(0, 124, 128);
-
 }
 
 .header_title {
@@ -44,28 +29,13 @@ div {
   display: inline-block;
 }
 
+div{
+  margin: 0 auto;
+}
+
 .footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  z-index: 999;
-  width: 100%;
-  height: 50px;
-}
-
-
-
-.main {
-  margin: 80px;
-}
-
-.chart {
-  flex-grow: 8;
-}
-
-.controller {
-  flex-grow: 2;
-  margin-top: 100px;
+  padding: 15px;
+  background-color: rgb(0, 124, 128);
 }
 
 .pod_title {
@@ -93,4 +63,66 @@ input {
 button {
   width: 50%;
   margin-left: 10px;
+}
+
+.col-1 {
+  width: 8.33%;
+}
+
+.col-2 {
+  width: 16.66%;
+}
+
+.col-3 {
+  width: 25%;
+}
+
+.col-4 {
+  width: 33.33%;
+}
+
+.col-5 {
+  width: 41.66%;
+}
+
+.col-6 {
+  width: 50%;
+}
+
+.col-7 {
+  width: 58.33%;
+}
+
+.col-8 {
+  width: 66.66%;
+}
+
+.col-9 {
+  width: 75%;
+}
+
+.col-10 {
+  width: 83.33%;
+}
+
+.col-11 {
+  width: 91.66%;
+}
+
+.col-12 {
+  width: 100%;
+}
+
+@media only screen and (max-width: 375px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
 }
