--- a/index.css
+++ b/index.css
@@ -1,13 +1,24 @@
-html{
-    height: 100%;
+* {
+    box-sizing: border-box;
 }
+
+.row::after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
+[class*="col-"] {
+    float: left;
+    padding: 15px;
+}
+
+html {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    width: 100%;
-    height: 50px;
+    padding: 15px;
     background-color: rgb(0, 124, 128);
 }
 
@@ -16,6 +27,75 @@ html{
     margin: 10px;
     color: aliceblue;
     display: inline-block;
+}
+
+.footer {
+    padding: 15px;
+    background-color: rgb(0, 124, 128);
+}
+
+.col-1 {
+    width: 8.33%;
+}
+
+.col-2 {
+    width: 16.66%;
+}
+
+.col-3 {
+    width: 25%;
+}
+
+.col-4 {
+    width: 33.33%;
+}
+
+.col-5 {
+    width: 41.66%;
+}
+
+.col-6 {
+    width: 50%;
+}
+
+.col-7 {
+    width: 58.33%;
+}
+
+.col-8 {
+    width: 66.66%;
+}
+
+.col-9 {
+    width: 75%;
+}
+
+.col-10 {
+    width: 83.33%;
+}
+
+.col-11 {
+    width: 91.66%;
+}
+
+.col-12 {
+    width: 100%;
+}
+
+@media only screen and (max-width: 375px) {
+
+    /* For mobile phones: */
+    [class*="col-"] {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+
+    /* For mobile phones: */
+    [class*="col-"] {
+        width: 100%;
+    }
 }
 
 #login-title {
@@ -51,21 +131,7 @@ td {
     padding: 2px 10px;
 }
 
-.container {
-    display: flex;
-    justify-content: center;
-    height: 600px;
-}
-
-.content {
-    margin: auto;
-}
-
-.footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    z-index: 999;
-    width: 100%;
-    height: 50px;
+.content{
+    width: 200px;
+    margin: 200px auto;
 }
